README, Rakefile tweaks and a gemspec

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,30 @@
-= rack-google_analytics
+= Rack::GoogleAnalytics
 
-Description goes here.
+Rack middleware to embed Google Analytics tracking code.
+
+== Usage
+
+  require "rack/google_analytics"
+
+  use Rack::GoogleAnalytics, :web_property_id => "UA-000000-0"
+
+  app = lambda { |env| [200, { 'Content-Type' => 'text/html' }, '<html><body></body></html>'] }
+  run app
+
+== Configuring for a Rails App
+
+  config.gem "ambethia-rack-google_analytics", :lib => "rack/google_analytics", :source => "http://gems.github.com"
+  config.middleware.use "Rack::GoogleAnalytics", :web_property_id => "UA-0000000-0"
+
+== TODO and Motivations
+
+This isn't very "feature rich", because I've mostly written it as an
+excuse to learn more about rack. Hell, it's possibly someone has already done
+it (and better); I didn't bother to look. See the notes below on contributing
+fixes for these deficiencies. 
+
+* Support for the various tracking options (http://code.google.com/apis/analytics/docs/gaJS/gaJSApi.html)
+* Legacy tracking code
 
 == Note on Patches/Pull Requests
  
@@ -10,7 +34,7 @@ Description goes here.
   future version unintentionally.
 * Commit, do not mess with rakefile, version, or history.
   (if you want to have your own version, that is fine but
-   bump version in a commit by itself I can ignore when I pull)
+  bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
 == Copyright
